<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_deliver_neighbour"
        android:orderInCategory="100"
        android:title="@string/to_neighbour"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deliver_postbox"
        android:orderInCategory="500"
        android:title="@string/to_postbox"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deliver_recipient"
        android:orderInCategory="1000"
        android:title="@string/to_recipient"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deliver_close"
        android:orderInCategory="1000"
        android:title="@string/close"
        app:showAsAction="never" />
</menu>