<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dev_prototype"
            android:icon="@drawable/ic_dev"
            android:title="@string/prototype"
            android:visible="false"/>
    </group>

    <group android:id="@+id/nav_group_2">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/capture_image"/>
        <item
            android:id="@+id/nav_check_updates"
            android:actionViewClass="android.widget.TextView"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/check_for_updates"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_bug"
            android:title="@string/report_bug"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:visible="false"/>
    </group>

    <group android:id="@+id/nav_group_dev">
        <item
            android:id="@+id/nav_dev_remote_settings"
            android:icon="@drawable/ic_service_exchange"
            android:title="Remote settings"
            android:visible="false"
            tools:ignore="HardcodedText" />
    </group>

</menu>
