<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.Layout.Content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="@dimen/margin"
            app:srcCompat="@drawable/ic_stop" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/uxNeighboursName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:nextFocusRight="@+id/uxNeighboursStreet"
                android:imeOptions="actionNext"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="@dimen/margin"
            app:srcCompat="@drawable/ic_stop" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_weight="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/uxNeighboursStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:hint="@string/street"
                android:nextFocusRight="@+id/uxNeighboursStreetNo"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/uxNeighboursStreetNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:hint="@string/number_short_no"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/uxContinue"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/continue_text"/>

</LinearLayout>