<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/uxAcknowledges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="vertical"
            />

        <LinearLayout
            style="@style/AppTheme.Layout.Content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                >

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_information_outline"/>

                <RadioGroup
                    android:id="@+id/uxSalutation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:divider="@drawable/divider_horizontal_medium"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    android:checkedButton="@+id/uxSalutationMr"
                    >

                    <RadioButton
                        android:id="@+id/uxSalutationMr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salutation_mr"
                        />

                    <RadioButton
                        android:id="@+id/uxSalutationMs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salutation_ms"
                        />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_person"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    >

                    <EditText
                        android:id="@+id/uxName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:completionThreshold="1"
                        android:gravity="center_vertical"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="text|textNoSuggestions|textCapWords"
                        android:maxLines="1"
                        android:nextFocusRight="@+id/uxStreet"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/uxStreetContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_stop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/uxStreet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:completionThreshold="1"
                            android:gravity="center_vertical"
                            android:hint="@string/street"
                            android:imeOptions="actionNext"
                            android:inputType="text|textNoSuggestions|textCapWords"
                            android:maxLines="1"
                            android:nextFocusRight="@+id/uxStreetNo"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        >

                        <EditText
                            android:id="@+id/uxStreetNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:digits="-01234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:gravity="center_vertical"
                            android:hint="@string/number_short_no"
                            android:imeOptions="actionDone"
                            android:inputType="text|textNoSuggestions"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
